--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chalk": "^5.2.0",
     "classnames": "^2.3.2",
     "eventsource-parser": "^1.0.0",
+    "fuse.js": "^6.6.2",
     "i18next": "^22.4.15",
     "langchain": "^0.0.72",
     "mongodb": "^5.5.0",
