--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@tabler/icons-react": "^2.18.0",
     "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-table": "^8.10.1",
     "@trpc/client": "^10.38.1",
     "@trpc/next": "^10.21.1",
     "@trpc/react-query": "^10.38.1",
