--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sass": "^1.62.1",
+    "superjson": "^1.13.3",
     "tiktoken": "^1.0.10",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
