--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@anthropic-ai/tokenizer": "^0.0.4",
+    "@aws-crypto/sha256-js": "^5.1.0",
+    "@aws-sdk/client-bedrock": "^3.428.0",
+    "@aws-sdk/credential-provider-node": "^3.428.0",
+    "@aws-sdk/types": "^3.428.0",
+    "@smithy/eventstream-codec": "^2.0.11",
+    "@smithy/protocol-http": "^3.0.7",
+    "@smithy/signature-v4": "^2.0.11",
+    "@smithy/util-utf8": "^2.0.0",
     "@tabler/icons-react": "^2.18.0",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-table": "^8.10.1",
@@ -24,10 +33,9 @@
     "@trpc/server": "^10.21.1",
     "chalk": "^5.2.0",
     "classnames": "^2.3.2",
-    "eventsource-parser": "^1.0.0",
     "fuse.js": "^6.6.2",
     "i18next": "^22.4.15",
-    "langchain": "^0.0.72",
+    "langchain": "^0.0.167",
     "mongodb": "^5.5.0",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
