--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,7 @@
 # Chatbot UI
 DEFAULT_MODEL=gpt-3.5-turbo
 OPENAI_API_KEY=YOUR_KEY
-NEXT_PUBLIC_DEFAULT_SYSTEM_PROMPT="You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown."
+DEFAULT_SYSTEM_PROMPT="You are ChatGPT, a large language model trained by OpenAI. Follow the user's instructions carefully. Respond using markdown."
 
 # Specify url to a json file that list available plugins.
 # When specifying multiple URLs, separate them with commas.
