--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "migrate:up": "migrate-mongo up",
+    "migrate:down": "migrate-mongo down",
+    "migrate:status": "migrate-mongo status"
   },
   "dependencies": {
     "@anthropic-ai/tokenizer": "^0.0.4",
@@ -83,6 +86,7 @@
     "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.3.2",
     "typescript": "4.9.5",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "migrate-mongo": "^11.0.0"
   }
 }
